--- a/HomeWork_2/WorkChat/src/main/res/layout/item_date.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_date.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/message_margin">
+    android:layout_marginTop="10dp">
 
     <TextView
         android:id="@+id/dateView"
