--- a/HomeWork_2/WorkChat/src/main/res/layout/item_message_view_income.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_message_view_income.xml
@@ -21,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:background="@drawable/bg_message_income"
         android:paddingStart="12dp"
         android:paddingTop="8dp"
         android:paddingEnd="12dp"
@@ -32,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:reactionHorizontalMargin="10dp"
-        app:reactionVerticalMargin="10dp" />
+        app:horizontalMargins="10dp"
+        app:verticalMargins="10dp" />
 
 </merge>
