--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_profile.xml
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="32sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guidelineCenter" />
@@ -55,7 +55,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/light_gray"
         android:textSize="20sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userName" />
@@ -68,7 +68,7 @@
         android:text="@string/online"
         android:textColor="@color/green"
         android:textSize="16sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userAbout" />
@@ -81,7 +81,7 @@
         android:text="@string/idle"
         android:textColor="@color/orange"
         android:textSize="16sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userAbout" />
