--- a/HomeWork_2/WorkChat/src/main/res/values/styles.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/styles.xml
@@ -40,4 +40,21 @@
     <style name="Theme.WorkChat.TabLayout.TextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textSize">16sp</item>
     </style>
+
+    <style name="Theme.WorkChat.Button.MessageAction" parent="@style/Widget.AppCompat.Button.Borderless">
+        <item name="android:gravity">start|center_vertical</item>
+        <item name="backgroundTint">@android:color/transparent</item>
+        <item name="iconGravity">start</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="iconTint">@color/white</item>
+        <item name="iconPadding">15dp</item>
+        <item name="android:paddingStart">25dp</item>
+        <item name="paddingEnd">0dp</item>
+        <item name="iconSize">26dp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="cornerRadius">0dp</item>
+        <item name="textAllCaps">false</item>
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:letterSpacing">0</item>
+    </style>
 </resources>
