--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_dialog.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
     <include
         android:id="@+id/toolbarLayout"
@@ -30,7 +31,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:paddingBottom="8dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/inputLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +39,21 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbarLayout"
         app:reverseLayout="true"
         app:stackFromEnd="true" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/downButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:contentDescription="@string/write_message"
+        android:src="@drawable/ic_expand"
+        android:visibility="gone"
+        app:backgroundTint="@color/background_light"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="@id/messagesList"
+        app:layout_constraintEnd_toEndOf="@id/messagesList"
+        app:tint="@color/gray" />
 
     <include
         android:id="@+id/inputLayout"
