--- a/HomeWork_2/WorkChat/src/main/res/layout/item_message_view_income.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_message_view_income.xml
@@ -7,6 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/gray"
         app:cardCornerRadius="100dp">
 
         <androidx.appcompat.widget.AppCompatImageView
