--- a/HomeWork_2/WorkChat/src/main/res/layout/item_people.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/item_people.xml
@@ -14,6 +14,7 @@
         android:layout_width="46dp"
         android:layout_height="46dp"
         app:cardCornerRadius="100dp"
+        android:backgroundTint="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent">
