--- a/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout-land/fragment_profile.xml
@@ -21,7 +21,7 @@
         android:layout_width="185dp"
         android:layout_height="185dp"
         android:layout_marginEnd="30dp"
-        android:backgroundTint="@android:color/transparent"
+        android:backgroundTint="@color/green"
         android:visibility="invisible"
         app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
