--- a/HomeWork_2/WorkChat/src/main/res/layout/fragment_streams.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/fragment_streams.xml
@@ -32,4 +32,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/channelsTabs" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/createButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:contentDescription="@string/create"
+        android:src="@drawable/ic_add"
+        app:layout_constraintBottom_toBottomOf="@id/channelsPages"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
