--- a/HomeWork_2/WorkChat/src/main/res/values/styles.xml
+++ b/HomeWork_2/WorkChat/src/main/res/values/styles.xml
@@ -57,4 +57,41 @@
         <item name="fontFamily">sans-serif</item>
         <item name="android:letterSpacing">0</item>
     </style>
+
+    <style name="Theme.WorkChat.Button.Switchable" parent="@style/Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="fontFamily">sans-serif</item>
+        <item name="android:gravity">center</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:letterSpacing">0</item>
+        <item name="android:textColor">@drawable/fg_switchable_button</item>
+        <item name="textAllCaps">false</item>
+        <item name="strokeColor">@color/green</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="cornerRadius">16dp</item>
+        <item name="backgroundTint">@drawable/bg_switchable_button</item>
+        <item name="rippleColor">@color/white</item>
+    </style>
+
+    <style name="Theme.WorkChat.TextInputLayout.Auto.Outlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+        <item name="android:textColorHint">@color/black_5</item>
+        <item name="boxStrokeColor">@color/green</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="endIconTint">@color/black_4</item>
+        <item name="boxCornerRadiusTopEnd">16dp</item>
+        <item name="boxCornerRadiusBottomEnd">16dp</item>
+        <item name="boxCornerRadiusBottomStart">16dp</item>
+        <item name="boxCornerRadiusTopStart">16dp</item>
+    </style>
+
+    <style name="Theme.WorkChat.TextInputLayout.Outlined" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:textColorHint">@color/black_5</item>
+        <item name="boxStrokeColor">@color/green</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="endIconTint">@color/black_4</item>
+        <item name="boxCornerRadiusTopEnd">16dp</item>
+        <item name="boxCornerRadiusBottomEnd">16dp</item>
+        <item name="boxCornerRadiusBottomStart">16dp</item>
+        <item name="boxCornerRadiusTopStart">16dp</item>
+    </style>
 </resources>
