--- a/HomeWork_2/WorkChat/src/main/res/layout/layout_message_outcome.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/layout_message_outcome.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:text="@string/deleted_message"
         android:textColor="@color/white"
+        android:textColorLink="@color/background_dark"
         android:textSize="16sp" />
 
     <androidx.appcompat.widget.AppCompatTextView
