--- a/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
+++ b/HomeWork_2/WorkChat/src/main/res/layout/input_layout.xml
@@ -3,27 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:animateLayoutChanges="true"
     android:background="@color/background_light"
     android:paddingStart="10dp"
     android:paddingTop="10dp"
     android:paddingEnd="4dp"
-    android:paddingBottom="10dp"
-    android:animateLayoutChanges="true">
+    android:paddingBottom="10dp">
+
+    <!-- Photo -->
 
     <ImageView
-        android:id="@+id/linkedIcon"
+        android:id="@+id/photoIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/edit"
-        android:src="@drawable/ic_edit"
+        android:src="@drawable/ic_photo"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/linkedMessage"
+        app:layout_constraintBottom_toBottomOf="@id/photoMessage"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/linkedMessage"
+        app:layout_constraintTop_toTopOf="@id/photoMessage"
         app:tint="@color/green" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/linkedMessage"
+        android:id="@+id/photoMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -35,20 +37,64 @@
         android:textSize="16sp"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/messageInput"
-        app:layout_constraintEnd_toStartOf="@id/linkedClose"
-        app:layout_constraintStart_toEndOf="@id/linkedIcon" />
+        app:layout_constraintEnd_toStartOf="@id/photoClose"
+        app:layout_constraintStart_toEndOf="@id/photoIcon" />
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/linkedClose"
+        android:id="@+id/photoClose"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
         android:src="@drawable/ic_close"
         android:tint="@color/black_5"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/linkedMessage"
+        app:layout_constraintBottom_toBottomOf="@id/photoMessage"
         app:layout_constraintEnd_toEndOf="@id/actionButton"
-        app:layout_constraintTop_toTopOf="@id/linkedMessage" />
+        app:layout_constraintTop_toTopOf="@id/photoMessage" />
+
+    <!-- Edit -->
+
+    <ImageView
+        android:id="@+id/editIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/edit"
+        android:src="@drawable/ic_edit"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/editMessage"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/editMessage"
+        app:tint="@color/green" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/editMessage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="15dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@color/light_gray"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/messageInput"
+        app:layout_constraintEnd_toStartOf="@id/editClose"
+        app:layout_constraintStart_toEndOf="@id/editIcon" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/editClose"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
+        android:src="@drawable/ic_close"
+        android:tint="@color/black_5"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/editMessage"
+        app:layout_constraintEnd_toEndOf="@id/actionButton"
+        app:layout_constraintTop_toTopOf="@id/editMessage" />
+
+    <!-- Message -->
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/editButton"
